[package]
name = "plumb"
version = "0.1.0"
edition = "2018"
license-file = "LICENSE"
description = "A functional, async pipeline framework"
repository = "https://github.com/ear7h/plumb"
readme = "README.md"
keywords = ["async"]
categories = ["asynchronous", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
