[package]
name = "plumb"
version = "0.1.0"
edition = "2018"
license-file = "LICENSE"
description = "A functional, async pipeline framework"
repository = "https://github.com/ear7h/plumb"
readme = "README.md"
documentation = "https://docs.rs/plumb/"
keywords = ["async"]
categories = ["asynchronous", "rust-patterns"]

[dependencies]
tuple_utils = { git = "https://github.com/ear7h/tuple_utils" }
